Update and rename bug_report.md to bug_report.yaml

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,5 +1,5 @@
 ---
-name: "[BUG]간략한 제목"
+name: "TP Korea 이슈 "
 about: TP Korea의 github issue 템플릿입니다. 형식에 맞춰 내용을 작성해 주세요.
 title: "[BUG]"
 labels: ''
